# eda-rust-demo

./: Cargo.toml  build.rs
proto/: packets.proto
src/: lib.rs  main.rs  rabbit_mq_transporter.rs
src/mq/: message.rs  mod.rs  topic.rs  transporter.rs
