[package]
name = "eda-demo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth"

[dependencies]
amiquip = { version = "0.4", default-features = false }
cuid = "1.3.1"
protobuf = "3.2.0"

[build-dependencies]
protobuf-codegen = "3.2.0"